# paircode-for-shell

./: .gitignore  Bacal.cpp  CMakeLists.txt  README.md  Sncheck.cpp  bcstest.cpp  efc1sp.txt  efc1usda.txt  efc1usdasing.txt  efcsncal.txt  efct1.txt  efct1cc.txt  efct1copy.txt  efct3.txt  efctest.txt  input.cpp  input.h  inputfile  inputfile2  inputfile_1  inputfile_11  inputfile_6_10  inputfile_6_10 copy  inputfile_6_10_1  inputfile_6_2  inputfile_6_4  inputfile_6_6  inputfile_6_8  inputfile_8_6_Cehfandexp  inputfile_pf  inputfile_pf_pint  inputfile_pftest  inputfile_sptest1_2_2  inputfile_sptest1_2_4  inputfile_sptest2_4  inputfile_sptest2_4 copy  inputfile_sptest_1_2_2  inputfile_sptest_1_2_4  inputfile_sptest_2_2_2  inputfile_sptest_2_2_4  (+43 more)
_codeql_build_dir/: CTestTestfile.cmake
inc/: WignerSymbol.hpp  bcscal.h  getbasis.h  global.h  inputmod.h  lanczos.h  maincal.h  moe.h  mtcal.h  qcal.h  writeout.h
inc/lambda_lanczos/: exponentiator.hpp
include/: PairApproximation.hpp
result/: result1  result2
src/: PairApproximation.cpp  basismaker.cpp  bcscal.cpp  efct1.txt  inputmod.cpp  main.cpp  maincal.cpp  matcal.cpp  moe.cpp  moeson.cpp  overlap.cpp  qcal.cpp
tests/: test_pair.cpp
